# napari-tomoslice

./: .cruft.json  .github_changelog_generator  README.md  debug.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: annotate.md  dipoles.md  export.md  generate.md  index.md  paths.md  points.md  spheres.md
example_data/dipoles/: TS_01_dipoles.star  TS_02_dipoles.star
example_data/paths/: TS_01_paths.star  TS_02_paths.star
example_data/points/: TS_01_points.star  TS_02_points.star
example_data/spheres/: TS_01_spheres.star  TS_02_spheres.star
napari_tomoslice/: __init__.py  cli.py  interactivity_utils.py  plane_controls.py  points_controls.py  tomoslice.py
napari_tomoslice/_qt/: dock_widget.py  open_close_widget.py  selectable_button_list.py  tomoslice.py  utils.py
napari_tomoslice/_qt/tests/: test_open_close_widget.py  test_selectable_button_list.py
src/napari_tomoslice/: __init__.py  _cli.py  _constants.py  cli.py  main.py  slicer.py  tomoslice.py  tomoslice_app.py  tomoslice_cli.py  utils.py
src/napari_tomoslice/annotation/: __init__.py  cli.py  tomoslice_app.py
src/napari_tomoslice/io/: __init__.py  dipoles.py  paths.py  points.py  spheres.py  surfaces.py  volume.py
src/napari_tomoslice/pose_conversion/: __init__.py  cli.py
src/napari_tomoslice/pose_export/: __init__.py  cli.py  dynamo.py  relion5.py
src/napari_tomoslice/pose_generation/: __init__.py  cli.py  dipoles.py  paths.py  points.py  spheres.py
src/napari_tomoslice/widgets/: __init__.py  (+10 more)
tests/: test_io.py
(+14 files in other folders)
