[metadata]
name = napari-tomoslice

author = Alister Burt
author_email = alisterburt@gmail.com
url = https://github.com/alisterburt/napari-tomoslice
license = BSD-3-Clause
description = A napari plugin for interacting with electron cryotomograms
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/alisterburt/napari-tomoslice/issues
    Documentation = https://github.com/alisterburt/napari-tomoslice#README.md
    Source Code = https://github.com/alisterburt/napari-tomoslice
    User Support = https://github.com/alisterburt/napari-tomoslice/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    napari[pyqt5]==0.4.12
    mrcfile
    typer


[options.entry_points] 
napari.plugin = 
    napari-tomoslice = napari_tomoslice
console_scripts =
    napari-tomoslice = napari_tomoslice.cli:cli
